2010-02-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added Local Peer Discovery. It is disabled by default. Use
	--bt-enable-lpd to enable the function.
	* src/BtConstants.h
	* src/BtSetup.cc
	* src/LpdDispatchMessageCommand.cc
	* src/LpdDispatchMessageCommand.h
	* src/LpdMessage.h
	* src/LpdMessageDispatcher.cc
	* src/LpdMessageDispatcher.h
	* src/LpdMessageReceiver.cc
	* src/LpdMessageReceiver.h
	* src/LpdReceiveMessageCommand.cc
	* src/LpdReceiveMessageCommand.h
	* src/Makefile.am
	* src/OptionHandlerFactory.cc
	* src/Peer.cc
	* src/Peer.h
	* src/PeerInteractionCommand.cc
	* src/SocketCore.cc
	* src/SocketCore.h
	* src/prefs.cc
	* src/prefs.h
	* src/usage_text.h
	* src/util.cc
	* src/util.h
	* test/LpdMessageDispatcherTest.cc
	* test/LpdMessageReceiverTest.cc
	* test/Makefile.am

2010-02-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	User-defined custom request headers specified by --header option
	now override builtin headers if they have same name.
	* src/HttpRequest.cc
	* src/HttpRequest.h
	* test/HttpRequestTest.cc

2010-02-19  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Rewirtten util::isNumber()
	* src/util.cc

2010-02-19  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Reverted changes in r1893. setlocale(LC_CTYPE, "") is needed
	because without it localized error messages are not printed
	correctly.
	* src/Platform.cc

2010-02-19  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added unit tests for util::getContentDispositionFilename() from
	http://greenbytes.de/tech/tc2231/ Fixed the function so that added
	tests are passed.
	* src/util.cc
	* test/UtilTest.cc

2010-02-18  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed setlocale() for LC_CTYPE. It may affect isxdigit in
	util.cc
	* src/Platform.cc

2010-02-18  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Support RFC2231 "Parameter Value Character Set and Language
	Information" in Content-Disposition header.