@@ -2,12 +2,12 @@
 .\"     Title: aria2c
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
-.\"      Date: 02/14/2010
+.\"      Date: 02/20/2010
 .\"    Manual: Aria2 Manual
 .\"    Source: Aria2 1.9.0a
 .\"  Language: English
 .\"
-.TH "ARIA2C" "1" "02/14/2010" "Aria2 1\&.9\&.0a" "Aria2 Manual"
+.TH "ARIA2C" "1" "02/20/2010" "Aria2 1\&.9\&.0a" "Aria2 Manual"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -486,6 +486,14 @@ In multi file torrent, the adjacent files specified by this option may also be d
 Print file listing of \&.torrent or \&.metalink file and exit\&. In case of \&.torrent file, additional information (infohash, piece length, etc) is also printed\&.
 .RE
 .SS "BitTorrent Specific Options"
+.PP
+\fB\-\-bt\-enable\-lpd\fR[=\fItrue\fR|\fIfalse\fR]
+.RS 4
+Enable Local Peer Discovery\&. If a private flag is set in a torrent, aria2 doesn\(cqt use this feature for that download even if
+\fItrue\fR
+is given\&. Default:
+\fIfalse\fR
+.RE
 .PP
 \fB\-\-bt\-external\-ip\fR=IPADDRESS
 .RS 4
