@@ -1172,6 +1172,16 @@ writes the piece to the appropriate files.</td>
 <h3 id="_bittorrent_specific_options">BitTorrent Specific Options</h3><div style="clear:left"></div>
 <div class="dlist"><dl>
 <dt class="hdlist1">
+<strong>--bt-enable-lpd</strong>[=<em>true</em>|<em>false</em>]
+</dt>
+<dd>
+<p>
+  Enable Local Peer Discovery.  If a private flag is set in a torrent,
+  aria2 doesn&#8217;t use this feature for that download even if <em>true</em> is
+  given.  Default: <em>false</em>
+</p>
+</dd>
+<dt class="hdlist1">
 <strong>--bt-external-ip</strong>=IPADDRESS
 </dt>
 <dd>
@@ -3712,7 +3722,7 @@ files in the program, then also delete it here.</p></div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2010-02-14 17:39:02 JST
+Last updated 2010-02-20 23:22:54 JST
 </div>
 </div>
 </body>
